# mod-hardcore-mode

./: CMakeLists.txt  README.md
conf/: hardcoremode.conf.dist
src/: CMakeLists.txt  HardcoreMode.cpp  HardcoreMode.h
